Apply suggestions from code review
Co-authored-by: Christian Hagedorn <christian.hagedorn@oracle.com>